--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "router": "^2.2.0",
